--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a href="mailto:contratista.alcaldia@gmail.com" class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-email"></i></a>
+                        <a href="mailto:contratista.alcaldia@gmail.com" class="social-link rounded-circle text-white mr-3" href="#!"><i class="fa-sharp fa-light fa-envelope"></i></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://www.linkedin.com/in/danilore/" class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-linkedin"></i></a>
