--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                        <p class="pre-wrap lead"><strong>Software Engineer</strong> with emphasis on Web Development. Lover of <strong>Clean Code</strong> and passionate about <strong>Agile methodologies</strong>, with a good grasp of UML, good proficiency in code versioning tools like GitHub, and proper implementation of the ER model using SQL languages such as PostgreSQL and MySQL. Over the last five years, my work experience as a Software developer has been mainly focused on the <strong>Python</strong> language and the <strong>Django</strong> framework, although I have been training myself to work with Frameworks like Java Spring Boot, Php Laravel and stacks like MEAN, MERN, and XAMPP.</p></p>
                     </div>
                     <div class="col-lg-4 mr-auto">
                         <p class="pre-wrap lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
