--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ Clark, MO 65243</p>
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="mb-4">AROUND THE WEB</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/danilore"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Daniel-Loaiza"><i class="fa fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Daniel-Loaiza"><i class="fab fa-fw fa-github"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
