--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/danielLoaizaNameLogo_3-transformed3.jpg" alt="juego" id="game">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/danielLoaizaNameLogo_3-transformed3.jpg" alt="juego">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">DANIEL LOAIZA</h1>
                 <!-- Icon Divider-->
