Update index.html 36

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/teddyBear.jpg" alt="profilePicture">
-                <!-- Masthead Avatar Image--><img src="assets/img/danielLoaizaNameLogo_3-transformed3.jpg" alt="juego" id="game">
+                <!-- Game Image--><img src="assets/img/danielLoaizaNameLogo_3-transformed3.jpg" alt="juego" id="game">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">DANIEL LOAIZA</h1>
                 <!-- Icon Divider-->
