Updated Text related to MongoDB

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><a href="https://charts.mongodb.com/charts-project0-jbvwa/public/dashboards/d57a387a-7106-4d70-8abf-a49cb9c12ae1"><img class="img-fluid rounded mb-5" src="assets/img/portfolio/MongoDB-Logo.jpg" alt="MongoDB"/></a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">A simple dashboard, developed for the purpose of testing the graphical capabilities of MongoDB Atlas.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
