--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><a href="https://charts.mongodb.com/charts-project0-jbvwa/public/dashboards/d57a387a-7106-4d70-8abf-a49cb9c12ae1"><img class="img-fluid rounded mb-5" src="assets/img/portfolio/MongoDB-Logo.jpg" alt="MongoDB"/></a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">A simple dashboard, developed for the purpose of testing the graphical capabilities of MongoDB Atlas.</p>
+                                    <p class="mb-5">A simple dashboard, developed with the sole purpose of testing the graphical capabilities of <b>MongoDB Atlas</b>. The sample set used for the dashboard is known as the <b>sample_airbn</b>b database and is a compilation of vacation home listings and reviews available on <a href="http://insideairbnb.com/get-the-data/">Inside AirBnB</a>.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
