--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-10" style="z-index: -1 !important!" src="assets/img/teddyBear.jpg" alt="profilePicture">
                 <!-- Game Image--><img src="assets/img/danielLoaizaNameLogo_3-transformed3.jpg" alt="juego" id="game">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading mb-0">DANIEL LOAIZA</h1>
+                <h1 class="masthead-heading my-4">DANIEL LOAIZA</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
