--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-10" style="z-index: -1 !important!" src="assets/img/teddyBear.jpg" alt="profilePicture">
-                <!-- Game Image--><img src="assets/img/danielLoaizaNameLogo_3-transformed3.jpg" alt="juego" id="game">
+                <div class="image-container">
+                    <img src="assets/img/teddyBear.jpg" alt="profilePicture" class="image img1">
+                    <img src="assets/img/danielLoaizaNameLogo_3-transformed3.jpg" alt="juego" class="image img2" id="game">
+                </div>
+                <!-- Masthead Avatar Image--><!-- img class="masthead-avatar mb-10" style="z-index: -1 !important!" src="assets/img/teddyBear.jpg" alt="profilePicture"-->
+                <!-- Game Image--><!--img src="assets/img/danielLoaizaNameLogo_3-transformed3.jpg" alt="juego" id="game"-->
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading my-4">DANIEL LOAIZA</h1>
                 <!-- Icon Divider-->
