--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <div class="image-container">
-                    <img src="assets/img/teddyBear.jpg" alt="profilePicture" class="masthead-avatar mb-10 image img1">
+                    <img src="assets/img/teddyBear.jpg" alt="profilePicture" class="mb-10 image img1">
                     <img src="assets/img/danielLoaizaNameLogo_3-transformed3.jpg" alt="juego" class="image img2" id="game">
                 </div>
                 <!-- Masthead Avatar Image--><!-- img class="masthead-avatar mb-10" style="z-index: -1 !important!" src="assets/img/teddyBear.jpg" alt="profilePicture"-->
